<resources>
    <string name="app_name">YemekAtolyesi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Hoş geldiniz</string>
    <string name="your_name_text">İsminiz</string>
    <string name="write_your_name_and_go">İsminizi yazarak ilerleyebilirsiniz.</string>
    <string name="go_on">İlerle</string>
    <string name="mail_text">Mail Adresi</string>
    <string name="password_text">Şifre</string>
    <string name="register_text">Kayıt Ol</string>
    <string name="login_text">Giriş</string>
    <string name="please_enter_your_name">Lütfen isim giriniz*</string>
    <string name="go_without_login">Üye olmadan devam et</string>
</resources>