<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.welcome.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bg_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/food_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/welcome_text"
            android:textColor="@color/text_red"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bg_image" />

        <TextView
            android:id="@+id/write_your_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/write_your_name_and_go"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/welcome_text" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/open_sans_regular"
            android:hint="@string/your_name_text"
            android:paddingStart="20dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/write_your_name_text"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_on_button"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rounded_green_button"
            android:fontFamily="@font/open_sans_medium"
            android:text="@string/go_on"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/name_edit_text"
            app:layout_constraintTop_toBottomOf="@id/tv_please_enter_name" />
        <TextView
            android:id="@+id/tv_please_enter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_name"
            android:textColor="@color/text_red"
            app:layout_constraintTop_toBottomOf="@id/name_edit_text"
            app:layout_constraintEnd_toEndOf="@id/name_edit_text"
            android:visibility="invisible"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="Yemek"
            android:textColor="#43927D"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semi_bold"
            android:text="Atölyesi"
            android:textColor="#43927D"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>