<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.login.LoginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="Yemek"
        android:textColor="#43927D"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="Atölyesi"
        android:textColor="#43927D"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <ImageView
        android:id="@+id/bg_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/food_background"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/login_text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/bg_image"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/mail_edit_text"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/mail_text"
        android:background="@drawable/bg_edit_text"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        android:paddingStart="20dp"
        android:textSize="14sp"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginTop="10dp"
        tools:ignore="RtlSymmetry" />
    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/password_text"
        android:background="@drawable/bg_edit_text"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/mail_edit_text"
        android:paddingStart="20dp"
        android:textSize="14sp"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginTop="10dp"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go_on_button"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:background="@drawable/bg_rounded_green_button"
        android:fontFamily="@font/open_sans_medium"
        android:text="@string/login_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />

    <TextView
        android:id="@+id/tv_go_without_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_without_login"
        android:fontFamily="@font/open_sans_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/button_green"
        android:layout_marginBottom="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>